# image-io

./: CMakeLists.txt  LICENSE  README.md
include/: Decoder.hpp  Encoder.hpp  Image.hpp
src/: Decoder.cpp  Encoder.cpp  Image.cpp
test/: contrast.cpp  image-creation.cpp  negative.cpp  ppm.cpp
test/sample-data/: salmon.ppm
